--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
     "dev": "next dev",
     "build": "next build && next export",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:ci": "jest --ci"
   },
   "dependencies": {
     "@types/wicg-file-system-access": "^2020.9.4",
@@ -14,10 +17,15 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "5.16.1",
+    "@testing-library/react": "12.1.2",
+    "@testing-library/user-event": "13.5.0",
     "@types/node": "17.0.2",
     "@types/react": "17.0.37",
+    "babel-jest": "27.4.5",
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
+    "jest": "27.4.5",
     "typescript": "4.5.4"
   }
 }
