--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "lint": "next lint",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:ci": "jest --ci"
+    "test:ci": "jest --ci",
+    "cypress": "cypress open",
+    "cypress:headless": "cypress run",
+    "e2e": "start-server-and-test dev http://localhost:3000 cypress",
+    "e2e:headless": "start-server-and-test dev http://localhost:3000 cypress:headless"
   },
   "dependencies": {
     "@types/wicg-file-system-access": "^2020.9.4",
@@ -26,6 +30,8 @@
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
     "jest": "27.4.5",
-    "typescript": "4.5.4"
+    "typescript": "4.5.4",
+    "cypress": "8.2.0",
+    "start-server-and-test": "1.13.1"
   }
 }
