--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@types/wicg-file-system-access": "^2020.9.4",
+    "framer-motion": "^5.5.5",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2"
