--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test:ci": "jest --ci"
   },
   "dependencies": {
+    "@panelbear/panelbear-nextjs": "^1.0.3",
     "@types/wicg-file-system-access": "^2020.9.4",
     "framer-motion": "^5.5.5",
     "next": "12.0.7",
