--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "cloc-web",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "BROWSER=none netlify dev",
+    "next:dev": "next dev",
     "build": "next build && next export",
     "start": "next start",
     "lint": "next lint",
@@ -11,8 +12,10 @@
     "test:ci": "jest --ci"
   },
   "dependencies": {
+    "@netlify/functions": "^0.10.0",
     "@panelbear/panelbear-nextjs": "^1.0.3",
     "@types/wicg-file-system-access": "^2020.9.4",
+    "faunadb": "^4.4.1",
     "framer-motion": "^5.5.5",
     "next": "12.0.7",
     "react": "17.0.2",
@@ -22,12 +25,12 @@
     "@testing-library/jest-dom": "5.16.1",
     "@testing-library/react": "12.1.2",
     "@testing-library/user-event": "13.5.0",
-    "@types/node": "17.0.2",
+    "@types/node": "^14.18.7",
     "@types/react": "17.0.37",
     "babel-jest": "27.4.5",
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
     "jest": "27.4.5",
-    "typescript": "4.5.4"
+    "typescript": "^4.5.4"
   }
 }
