--- a/package.json
+++ b/package.json
@@ -32,11 +32,11 @@
     "@types/node": "^14.18.7",
     "@types/react": "17.0.37",
     "babel-jest": "27.4.5",
+    "cypress": "^9.3.1",
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
     "jest": "27.4.5",
-    "typescript": "4.5.4",
-    "cypress": "8.2.0",
-    "start-server-and-test": "1.13.1"
+    "start-server-and-test": "1.13.1",
+    "typescript": "4.5.4"
   }
 }
