--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
     "jest": "27.4.5",
+    "netlify-plugin-cypress": "^2.2.0",
     "start-server-and-test": "1.13.1",
     "typescript": "4.5.4"
   }
