--- a/netlify.toml
+++ b/netlify.toml
@@ -15,7 +15,7 @@
     # before building it (and testing the built site)
     [plugins.inputs.preBuild]
         enable = true
-        start = 'npm run dev'
+        start = 'npm run next:dev'
         wait-on = 'http://localhost:8888'
         wait-on-timeout = '30' # seconds
 
