--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "build": "next build && next export",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:ci": "jest --ci",
+    "test:unit": "jest",
+    "test:unit:watch": "jest --watch",
+    "test:unit:ci": "jest --ci",
     "cypress": "cypress open",
     "cypress:headless": "cypress run",
     "e2e": "start-server-and-test dev http://localhost:3000 cypress",
