--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@netlify/functions": "^0.10.0",
     "@sentry/browser": "^6.17.6",
     "@sentry/tracing": "^6.17.6",
-    "@types/wicg-file-system-access": "^2020.9.4",
+    "@types/wicg-file-system-access": "2023.10.5",
     "faunadb": "^4.4.1",
     "framer-motion": "^5.5.5",
     "next": "13.2.4",
@@ -32,7 +32,7 @@
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
-    "@types/node": "^14.18.7",
+    "@types/node": "22.13.1",
     "@types/react": "18.0.28",
     "babel-jest": "27.4.5",
     "cypress": "^9.3.1",
@@ -42,6 +42,6 @@
     "netlify-cli": "^13.1.3",
     "netlify-plugin-cypress": "^2.2.0",
     "start-server-and-test": "1.13.1",
-    "typescript": "4.5.4"
+    "typescript": "5.7.3"
   }
 }
